--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,10 +63,10 @@
 											 class: ["instagram-icon", "icon"]) %></a>
 			<a href="http://www.linkedin.com/" target="_blank">
 				<%= icon_asset("linkedin-flat-minimalistic-circles-64x64.png",
-											 class: ["linkedin-icon", "icon"]) %></a>
+											 class: ["not_in_use", "linkedin-icon", "icon"]) %></a>
 			<a href="http://www.skype.com/" target="_blank">
 				<%= icon_asset("skype-flat-minimalistic-circles-64x64.png",
-											 class: ["skype-icon", "icon"]) %></a>
+											 class: ["not_in_use", "skype-icon", "icon"]) %></a>
 			<a href="http://www.twitter.com/" target="_blank">
 				<%= icon_asset("twitter-flat-minimalistic-circles-64x64.png",
 											 class: ["twitter-icon", "icon"]) %></a>
