Updated the about page.

--- a/app/views/dashboard/about.html.erb
+++ b/app/views/dashboard/about.html.erb
@@ -1,2 +1,22 @@
 <% content_for :page_title, "About" %>
-<%= render "content", content: @content %>
+
+<div class="about_content content">
+	<h1 class="heading">ABOUT US</h1>
+	<%= image_asset("group_photo.jpg", class: "image--group_photo") %>
+	<p>Romp International is embarking on a new and epic journey for 2016. Romp International has reached its fourth year participating in Grand Kadooment. During the past years we have gained valuable experience and we have re-structured our brand.
+	</p>
+	<p>
+		2016 will see Romp launching with a fresh new look and more appealing costumes in response to our band members. Romp International is more than just a band our “Rompers” have become a unique family and have helped us build a culture we plan to nurture and develop for years to come.
+		Romp International is now an internationally recognized Grand Kadooment Band who has now reached its fourth year.
+	</p>
+	<p>
+		Romp will continue to uphold the festival’s best traditions and embrace the festive passion. Although Kadooment is ever expanding and changing, we promise to move forward as one of the best bands on the road embracing masqueraders in every size and shape.
+	</p>
+	<h3>Achievements</h3>
+	<p>
+		Over the past three (3) years Romp has been recognized for the outstanding work we have been showcasing.  In 2014 Romp was chosen to participate in the U.S.A. series “Love and Hip Hop” series 5 episode 4, which was filmed in July 2014 and aired on CBS in New York and on YouTube in December 2014.
+	</p>
+	<p>
+		2015 Romp was invited to participate in the Crop-over cocktail party at The Hilton Hotel Barbados, where The Right Honorable Prime Minister Frundel Stuart was in attendance. Romp captured the crop over spirit with our colorful costume, flamboyant models and dancers who captivated both locals and tourist.
+	</p>
+</div>
