Corrected display bug that show up in Chrome/Chromium and Safari.

--- a/app/assets/stylesheets/themes/toolbar_top.scss
+++ b/app/assets/stylesheets/themes/toolbar_top.scss
@@ -62,12 +62,12 @@
 				}
 				.romp-icon {
 						height: 120%;
-						width: 140%;
+						width: 6rem;
 						margin: 0;
 				}
 				.key-1443024456-icon {
 						height: 100%;
-						width: 100%;
+						width: 3rem;
 						margin-left: 0;
 				}
 				* {
