--- a/app/views/dashboard/_content.html.erb
+++ b/app/views/dashboard/_content.html.erb
@@ -1,3 +1,4 @@
 <div class="content">
-	<%= @content %>
+	<h1 class="home_page_title"><%= @title  %></h1>
+	<p class="home_page_description"><%= @content %></p>
 </div>
