--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,2 @@
 <% content_for :page_title, "Homepage" %>
-<%= render "content", content: @content %>
+<%= render "content", locals: {title: @title, content: @content} %>
