--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -3,6 +3,9 @@
 
 	<%= f.label :name %>
 	<%= f.text_field :name %>
+
+	<%= f.label :disc_jockey %>
+	<%= f.text_field :disc_jockey %>
 	
 	<%= f.label :description %>
 	<%= f.text_area :description %>
