--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -5,6 +5,10 @@
 		<%= f.text_field :name, class: "text_field" %>
 	</div>
 	<div class="field_group">
+		<%= f.label :disc_jockey %>
+		<%= f.text_field :disc_jockey, class: "text_field" %>
+	</div>
+	<div class="field_group">
 		<%= f.label :description %>
 		<%= f.text_area :description, class: "text_field" %>
 	</div>
