--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,6 +4,8 @@
 	<h1><%= @event.name %></h1>
 	<h2>Description</h2>
 	<p><%= @event.description %></p>
+	<h2>Disc Jockey</h2>
+	<p><%= @event.disc_jockey %></p>
 	<dl>
 		<dt>Start:</dt>
 		<dd><%= @event.start %></dd>
@@ -12,4 +14,4 @@
 		<dt>Location:</dt>
 		<dd><%= @event.location %></dd>
 	</dl>
-</DIV>
+</div>
