Updated link to open in new tab.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
 			<a href="http://plus.google.com/" target="_blank">
 				<%= icon_asset("googleplus-flat-minimalistic-circles-64x64.png",
 											 class: ["googleplus-icon", "icon"]) %></a>
-			<a href="http://www.instagram.com/" target="_blank">
+			<a href="https://instagram.com/rompinternational246/" target="_blank">
 				<%= icon_asset("instagram-flat-minimalistic-circles-64x64.png",
 											 class: ["instagram-icon", "icon"]) %></a>
 			<a href="http://www.linkedin.com/" target="_blank">
